--- a/css/style.css
+++ b/css/style.css
@@ -592,7 +592,7 @@
 					}
 
 				.main.style3.primary {
-					background: #fff;
+					background: #f5f6f7;
 				}
 			
 				.main.style3.secondary {
