--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -39,11 +39,11 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color:#232323;
-  margin:36px 0 10px;
+  margin:26px 0 10px;
 }
 
 p, ul, ol, table, dl {
-  margin:0 0 22px;
+  margin:0 0 21px;
 }
 
 h1, h2, h3 {
@@ -82,7 +82,7 @@ a {
 }
 
 a:hover {
-	text-decoration: underline;
+	text-decoration:none;
 }
 
 a small {
@@ -307,6 +307,10 @@ a.buttons {
 
 a.github {
 /*	background: url(../images/octocat-small.png) no-repeat 1px;*/
+}
+
+div.personal {
+  line-height: 1.0em;
 }
 
 /* Section - for main page content */
